// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PackChip > selected variant matches snapshot (tag-color filled) 1`] = `
<button
  aria-checked="true"
  class="min-h-16 rounded-xl border px-4 py-3 text-left transition-colors disabled:opacity-60 bg-tag-red text-on-dark border-transparent shadow-md"
  data-testid="pack-chip-pl"
  role="radio"
  type="button"
>
  <span
    class="block font-display text-base uppercase tracking-[0.5px]"
  >
    พรีเมียร์ลีก
  </span>
  <span
    class="block text-xs opacity-90"
  >
    Premier League
  </span>
</button>
`;

exports[`PackChip > unselected variant matches snapshot (surface-elevated) 1`] = `
<button
  aria-checked="false"
  class="min-h-16 rounded-xl border px-4 py-3 text-left transition-colors disabled:opacity-60 border-hairline bg-surface-elevated text-on-dark active:bg-surface"
  data-testid="pack-chip-pl"
  role="radio"
  type="button"
>
  <span
    class="block font-display text-base uppercase tracking-[0.5px]"
  >
    พรีเมียร์ลีก
  </span>
  <span
    class="block text-xs text-on-dark-soft"
  >
    Premier League
  </span>
</button>
`;
